<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--Switched UI elements to more standard ones.
        Before, the place where we were going to display the image
        was using code that wasn't in the Android Library and
        ultimately I couldn't find any good documentation on
        how to effectively use it. I also changed the floating
        action buttons to regular buttons, but we could change that
        back for aesthetic reasons. Right now I just want to get something
        down that other people can work on-->

    <ImageView
        android:id="@+id/imageCapture"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="68dp"
        android:contentDescription="The image preview"
        app:layout_constraintBottom_toTopOf="@+id/predictions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/picture_frame" />

    <!--android:background="@android:drawable/bottom_bar"-->
    <LinearLayout
        android:id="@+id/buttonHolderLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/captureButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capture_button" />

        <Button
            android:id="@+id/analyzeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/analyze_button" />

    </LinearLayout>

    <TextView
        android:id="@+id/predictions"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="@string/predictions"
        app:layout_constraintBottom_toTopOf="@+id/buttonHolderLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageCapture" />

</androidx.constraintlayout.widget.ConstraintLayout>